# PythonProject6

./: .flake8  README.md  pyproject.toml  test_log.txt  widget.py
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  reading_operations.py  utils.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
